Closed Bug 1688680 Opened 3 years ago Closed 3 years ago

Selected text in content does not get read by VO

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed
firefox87 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [mac2020_2])

Attachments

(1 file)

I think this is because of a misuse of the AXTextStateSync flag. Still not 100% sure when this should be present. In Safari I think it happens when focus changes in read-only content and the caret goes to the start of the focused item. For example, VO+next to a link will focus the link, and move the caret with AXTextStateSync. Otherwise, that flag is not present.

We don't have a reliable way to know when a caret moved because of focus change in Firefox at this time.

I observed that VO does read the selected text if AXTextStateSync is not present when the selection is expanded. That might be the easiest solution for now.

Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c319b4edb6dc
Don't include AXTextStateSync in read-only collapsed text selection events. r=morgan.
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch

Set release status flags based on info from the regressing bug 1686995

Comment on attachment 9199062 [details]
Bug 1688680 - Don't include AXTextStateSync in read-only collapsed text selection events. r?morgan!.

Beta/Release Uplift Approval Request

  • User impact if declined: VoiceOver users will not hear selected text.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a trivial change with tests.
  • String changes made/needed:
Attachment #9199062 - Flags: approval-mozilla-beta?

Comment on attachment 9199062 [details]
Bug 1688680 - Don't include AXTextStateSync in read-only collapsed text selection events. r?morgan!.

Approved for 86 beta 4, thanks.

Attachment #9199062 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.