Bug 1688680 - Don't include AXTextStateSync in read-only collapsed text selection events. r=morgan.

Differential Revision: https://phabricator.services.mozilla.com/D102948